@@ -5,4 +5,5 @@ log stream --color=always --predicate 'subsystem == "com.apple.TimeMachine"' --i
     grep --line-buffered --invert-match TMSession |
     grep --line-buffered --invert-match BackupClientManager |
     grep --line-buffered --invert-match connection\ invalid |
-    grep --line-buffered --invert-match Mountpoint
+    grep --line-buffered --invert-match Mountpoint |
+    grep --line-buffered --invert-match Spotlight
