@@ -95,7 +95,9 @@ if [ "${KIND}" = "Local" ] ; then
     KIND="Local disk"
 fi
 
-if tmutil listbackups 2>&1 | grep -q -F 'listbackups requires Full Disk Access privileges'; then
+LISTBACKUPS=$( tmutil listbackups 2>&1 )
+
+if echo "${LISTBACKUPS}" | grep -q -F 'listbackups requires Full Disk Access privileges'; then
 
     cat <<'EOF'
 Error:
@@ -109,7 +111,7 @@ to the list of applications which are allowed Full Disk Access.
 EOF
     exit 1
 
-elif tmutil listbackups 2>&1 | grep -q 'No machine directory found for host.'; then
+elif echo "${LISTBACKUPS}" | grep -q 'No machine directory found for host.'; then
 
     if tmutil status 2>&1 | grep -q 'HealthCheckFsck'; then
 
@@ -124,7 +126,7 @@ elif tmutil listbackups 2>&1 | grep -q 'No machine directory found for host.'; t
 
     fi
 
-elif tmutil listbackups 2>&1 | grep -q 'No backups found for host.'; then
+elif echo "${LISTBACKUPS}" | grep -q 'No backups found for host.'; then
 
     printf 'Time Machine: no backups found\n'
 
@@ -141,25 +143,25 @@ else
     
     printf 'Volume (%s) "%s": %s (%s available, %s%%)\n' "${KIND}" "${tm_mount_point}" "${tm_total}" "${tm_available}" "${tm_percent_available}"
     
-    DATE="$(tmutil listbackups | head -n 1 | sed 's/.*\///' | sed 's/[.].*//')"
+    DATE="$( echo "${LISTBACKUPS}" | head -n 1 | sed 's/.*\///' | sed 's/[.].*//')"
     days="$(days_since "${DATE}")"
-    backup_date=$(tmutil listbackups | head -n 1 | sed 's/.*\///' | sed 's/[.].*//' | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/')
+    backup_date=$( echo "${LISTBACKUPS}" | head -n 1 | sed 's/.*\///' | sed 's/[.].*//' | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/')
     DAYS_AGO="$(format_days_ago "${days}")"
     printf 'Oldest:\t\t%s (%s)\n' "${backup_date}" "${DAYS_AGO}"
 
-    latestbackup="$(tmutil latestbackup)"
-    if echo "${latestbackup}" | grep -q '[0-9]'; then
+    LATESTBACKUP="$(tmutil latestbackup)"
+    if echo "${LATESTBACKUP}" | grep -q '[0-9]'; then
         # a date was returned (should implement a better test)
-        DATE="$(tmutil latestbackup | sed 's/.*\///' | sed 's/[.].*//')"
+        DATE="$( echo "${LATESTBACKUP}" | sed 's/.*\///' | sed 's/[.].*//')"
         days=$(days_since "${DATE}")
-        backup_date=$(tmutil latestbackup | sed 's/.*\///' | sed 's/[.].*//' | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/')
+        backup_date=$( echo "${LATESTBACKUP}" | sed 's/.*\///' | sed 's/[.].*//' | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/')
         DAYS_AGO="$(format_days_ago "${days}")"
         printf 'Last:\t\t%s (%s)\n' "${backup_date}" "${DAYS_AGO}"
     else
-        printf 'Last:\t\t%s\n' "${latestbackup}"
+        printf 'Last:\t\t%s\n' "${LATESTBACKUP}"
     fi
 
-    number=$(tmutil listbackups | wc -l | sed 's/\ //g')
+    number=$( echo "${LISTBACKUPS}" | wc -l | sed 's/\ //g')
     printf 'Number:\t\t%s\n' "${number}"
 
 fi
@@ -169,7 +171,9 @@ echo
 ##############################################################################
 # Local backup statistics
 
-if tmutil listlocalsnapshotdates / 2>&1 | grep -q '[0-9]'; then
+LOCALSNAPSHOTDATES=$( tmutil listlocalsnapshotdates / 2>&1 )
+
+if echo "${LOCALSNAPSHOTDATES}" | grep -q '[0-9]'; then
 
     tm_total=$(df -H / | tail -n 1 | awk '{ print $2 "\t" }' | sed 's/[[:blank:]]//g')
     tm_available=$(df -H / | tail -n 1 | awk '{ print $4 "\t" }' | sed 's/[[:blank:]]//g')
@@ -180,13 +184,13 @@ if tmutil listlocalsnapshotdates / 2>&1 | grep -q '[0-9]'; then
     
     printf 'Local: %s (%s available, %s%%)\n' "${tm_total}" "${tm_available}" "${tm_percent_available}"
     printf 'Local oldest:\t'
-    tmutil listlocalsnapshotdates / | sed -n 2p | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/'
+    echo "${LOCALSNAPSHOTDATES}" | sed -n 2p | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/'
 
     printf 'Local last:\t'
-    tmutil listlocalsnapshotdates / | tail -n 1 | sed 's/.*\///' | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/'
+    echo "${LOCALSNAPSHOTDATES}" | tail -n 1 | sed 's/.*\///' | sed 's/-\([^\-]*\)$/\ \1/' | sed 's/\([0-9][0-9]\)\([0-9][0-9]\)\([0-9][0-9]\)/\1:\2:\3/'
 
     printf 'Local number:\t'
-    tmutil listlocalsnapshotdates / | wc -l | sed 's/\ //g'
+    echo "${LOCALSNAPSHOTDATES}" | wc -l | sed 's/\ //g'
 
     echo
 
